<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="?android:attr/listPreferredItemHeight"
              android:layout_gravity="center_vertical"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_stock_sernr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_zone_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"/>

    <TextView
        android:id="@+id/tv_zone_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_status_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/ib_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_save"
        android:contentDescription="@string/sync_stock"/>

    <ImageButton
        android:id="@+id/ib_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/edit_stock"/>

    <ImageButton
        android:id="@+id/ib_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/delete_stock"/>
</LinearLayout>