...

    <TextView
        android:id="@+id/tv_item_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btn_ok"
        android:layout_toStartOf="@+id/btn_ok"
        android:text="@string/header_zone_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"/>

    <TextView
...
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_item_title"
        android:text="@string/item_code"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_item_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_item_code"
        android:ems="10"
...
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_item_barcode"
        android:text="@string/item_qty"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_item_qty"
        android:ems="10"
...
